--- a/P003021.opf/meta.yml
+++ b/P003021.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W22308
   title: ཐོད་པ་བཟང་ངན་བརྟག་ཐབས་དང་བཞེད་ཧོར་བསང་མཆོད།
   author: ''
-  volumes: {}
+  volumes:
+    daf4b1af9ca945b097c9c9b8209bcaee:
+      image_group_id: I1KG9611
+      title: ''
+      volume_number: 1
+      total_pages: 30
