--- a/P003021.opf/layers/v001/Pagination.yml
+++ b/P003021.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 65e63930a737492d9a733f5c230146e8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   dcf4cfcb1dda4821ac86639763879fa8:
